# postgit

./: .tool-versions  Cargo.toml  README.md  config.toml
.github/workflows/: audit.yaml  ci.yaml
src/: cli.rs  config.rs  db.rs  diff.rs  lib.rs  main.rs  repo.rs
tests/: diff_test.rs  push_test.rs  watch_test.rs
tests/common/: mod.rs
