[package]
name = "postgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
git-repository = "0.28.0"
tokio = {version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"]}
tokio-postgres = "0.7.7"
