[package]
name = "postgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
git-repository = "0.28.0"
notify = "5.0.0"
notify-debouncer-mini = "0.2.1"
petgraph = "0.6.2"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = {version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"]}
tokio-postgres = "0.7.7"
toml = "0.5.9"
walkdir = "2.3.2"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.3.0"
